--- a/fabcar/java/pom.xml
+++ b/fabcar/java/pom.xml
@@ -39,6 +39,11 @@
          <artifactId>junit-platform-launcher</artifactId>
          <version>1.4.2</version>
       </dependency>
+<!--      <dependency>-->
+<!--         <groupId>com.owlike</groupId>-->
+<!--         <artifactId>genson</artifactId>-->
+<!--         <version>1.6</version>-->
+<!--      </dependency>-->
       <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
